# cmake_exercises

./: README.md
cmake_shared/: CMakeLists.txt  main.cpp
cmake_shared/include/: world.h
cmake_shared/src/: CMakeLists.txt
cmake_shared/src/hello/: CMakeLists.txt
cmake_shared/src/world/: CMakeLists.txt  world.cpp
cmake_static/: CMakeLists.txt
cmake_static/src/: CMakeLists.txt  hello_world.cpp
cmake_static/src/hello/: CMakeLists.txt  hello.cpp
cmake_static/src/world/: CMakeLists.txt
test/: CMakeLists.txt  main.c
